# PassmerRust

./: .gitignore  .gitignore.bak  LICENSE  README.md
passmer/: Cargo.toml  build.rs  passmer.db
passmer/migrations/00000_initial/: down.sql  up.sql
passmer/passmer/: .hintrc  Cargo.toml  index.html  package-lock.json  package.json  tauri.ps1  tauri.sh  vite.config.js
passmer/passmer/src/: Login.jsx  contextmenu.jsx  fields.jsx  invokes.jsx  login.jsx  main.jsx  seasonal_class.jsx  sidebar.jsx
passmer/passmer/src-tauri/: Cargo.toml  tauri.conf.json
passmer/passmer/src-tauri/icons/: icon.icns
passmer/passmer/src-tauri/src/: main.rs
passmer/passmer/src-tauri/src/code/: data_finder.rs  fields.rs  languages.rs  login.rs  mod.rs  msg_box.rs  sidebar.rs  update.rs
passmer/passmer/src-tauri/src/database/: commands.rs  db_file.rs  field.rs  mod.rs  passmer.rs  section.rs
passmer/passmer/src-tauri/src/languages/: en.pmerlng
passmer/passmer/src-tauri/src/tauri_ui/: window.rs
passmer/passmer/src/assets/: PassmerLock.ai  icon.ai  icon.icns
passmer/passmer/src/style/: _addSection.scss  _changelog.scss  _fields.scss  _login.scss  _remoteTyping.scss  _sidebar.scss  _variables.scss  customPicker.scss  main.css  main.css.map  main.scss
passmer/passmer/src/style/components/: _button.scss  _contextmenu.scss  _input.scss  _select.scss
passmer/passmer_updater/: Cargo.toml
passmer/passmer_updater/src/: main.rs
passmer/src/: ideas.txt  main.rs
passmer/src/crypto/: aes256.rs  mod.rs
passmer/src/database/: local_db.rs  mod.rs
passmer/src/ui/: main_ui.rs
