[package]
name = "passmer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
aes-gcm = "0.10.3"
diesel = { version = "2.1.4", features = ["sqlite"] }
diesel_migrations = "2.1.0"
gtk4 = "0.7.3"
pbkdf2 = "0.12.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html