[package]
name = "passmer"
version = "0.1.0"
description = "A secure password manager"
authors = ["Fabian Schlüter"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
serde_json = "1.0.122"
serde = { version = "1.0.216", features = ["derive"] }
tauri = { version = "1.7.1", features = [] }
rfd = "0.15.1"
aes-gcm = "0.10.3"
rand = "0.8.5"
sha2 = "0.10.8"
lazy_static = "1.5.0"
named-lock = "0.4.1"
open = "5.3.0"
# clipboard = "0.5.0" # Possible security issue, it's an old package. Replaced by copypasta
enigo = "0.3.0"
reqwest = "0.12.5"
rayon = "1.10.0"
copypasta = "0.10.1"
otp-std = "0.1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
